refactor(properties): improve typing

--- a/projects/editor/src/lib/property/cyclic-properties/array-property.component.html
+++ b/projects/editor/src/lib/property/cyclic-properties/array-property.component.html
@@ -86,7 +86,7 @@
             [treeLevel]="childrenTreeLevel"
             [path]="getChildPath(child.key)"
             [target]="target"
-            [property]="propertyService.getAsArrayProperty(child)"
+            [property]="child"
             [treeMode]="treeMode"
             (remove)="onRemoveChild(index)"
             (targetChanged)="targetChanged.emit($event)"
@@ -98,7 +98,7 @@
             [treeLevel]="childrenTreeLevel"
             [path]="getChildPath(child.key)"
             [target]="target"
-            [property]="propertyService.getAsObjectProperty(child)"
+            [property]="child"
             [treeMode]="treeMode"
             [useExpansionPanel]="false"
             (remove)="onRemoveChild(index)"
@@ -122,7 +122,7 @@
             *ngSwitchCase="typeofProperty.CHIP_LIST"
             [treeLevel]="childrenTreeLevel"
             [path]="getChildPath(child.key)"
-            [property]="propertyService.getAsChiplistProperty(child)"
+            [property]="child"
             [target]="target"
             [treeMode]="treeMode"
             (remove)="onRemoveChild(index)"
@@ -134,7 +134,7 @@
             *ngSwitchCase="typeofProperty.TEXTAREA"
             [treeLevel]="childrenTreeLevel"
             [path]="getChildPath(child.key)"
-            [property]="propertyService.getAsTextareaProperty(child)"
+            [property]="child"
             [target]="target"
             [treeMode]="treeMode"
             (remove)="onRemoveChild(index)"
@@ -152,7 +152,7 @@
             <editor-input-property
                 [treeLevel]="childrenTreeLevel"
                 [path]="getChildPath(child.key)"
-                [property]="propertyService.getAsInputProperty(child)"
+                [property]="child"
                 [target]="target"
                 [treeMode]="treeMode"
                 (remove)="onRemoveChild(index)"
