--- a/projects/editor/src/lib/property/cyclic-properties/object-property.component.html
+++ b/projects/editor/src/lib/property/cyclic-properties/object-property.component.html
@@ -93,7 +93,7 @@
                 [treeLevel]="childrenTreeLevel"
                 [path]="getChildPath(child.key)"
                 [target]="target"
-                [property]="propertyService.getAsArrayProperty(child)"
+                [property]="child"
                 [treeMode]="childrenTreeMode"
                 (remove)="onRemoveChild(i)"
                 (targetChanged)="targetChanged.emit($event)"
@@ -105,7 +105,7 @@
                 [treeLevel]="childrenTreeLevel"
                 [path]="getChildPath(child.key)"
                 [target]="target"
-                [property]="propertyService.getAsObjectProperty(child)"
+                [property]="child"
                 [treeMode]="childrenTreeMode"
                 (remove)="onRemoveChild(i)"
                 (targetChanged)="targetChanged.emit($event)"
@@ -128,7 +128,7 @@
                 *ngSwitchCase="typeofProperty.CHIP_LIST"
                 [treeLevel]="childrenTreeLevel"
                 [path]="getChildPath(child.key)"
-                [property]="propertyService.getAsChiplistProperty(child)"
+                [property]="child"
                 [target]="target"
                 [treeMode]="childrenTreeMode"
                 (remove)="onRemoveChild(i)"
@@ -140,7 +140,7 @@
                 *ngSwitchCase="typeofProperty.SELECT"
                 [treeLevel]="childrenTreeLevel"
                 [path]="getChildPath(child.key)"
-                [property]="propertyService.getAsSelectProperty(child)"
+                [property]="child"
                 [target]="target"
                 [treeMode]="childrenTreeMode"
                 (remove)="onRemoveChild(i)"
@@ -152,7 +152,7 @@
                 *ngSwitchCase="typeofProperty.TEXTAREA"
                 [treeLevel]="childrenTreeLevel"
                 [path]="getChildPath(child.key)"
-                [property]="propertyService.getAsTextareaProperty(child)"
+                [property]="child"
                 [target]="target"
                 [treeMode]="childrenTreeMode"
                 (remove)="onRemoveChild(i)"
@@ -164,7 +164,7 @@
                 *ngSwitchCase="typeofProperty.EXPRESSION_PROPERTIES"
                 [treeLevel]="childrenTreeLevel"
                 [path]="getChildPath(child.key)"
-                [property]="propertyService.getAsExpressionPropertiesProperty(child)"
+                [property]="child"
                 [target]="target"
                 [treeMode]="childrenTreeMode"
                 (remove)="onRemoveChild(i)"
@@ -176,7 +176,7 @@
                 *ngSwitchCase="typeofProperty.VALIDATORS"
                 [treeLevel]="childrenTreeLevel"
                 [path]="getChildPath(child.key)"
-                [property]="propertyService.getAsValidatorsProperty(child)"
+                [property]="child"
                 [target]="target"
                 [treeMode]="childrenTreeMode"
                 (remove)="onRemoveChild(i)"
@@ -194,7 +194,7 @@
                 <editor-input-property
                     [treeLevel]="childrenTreeLevel"
                     [path]="getChildPath(child.key)"
-                    [property]="propertyService.getAsInputProperty(child)"
+                    [property]="child"
                     [target]="target"
                     [treeMode]="childrenTreeMode"
                     (remove)="onRemoveChild(i)"
