--- a/src/theme.scss
+++ b/src/theme.scss
@@ -4,13 +4,13 @@
 
 @include mat.core();
 
-$primary-palette: mat.define-palette(mat.$indigo-palette, 500);
-$accent-palette: mat.define-palette(mat.$pink-palette, A200, A100, A400);
+$primary-palette: mat.m2-define-palette(mat.$m2-indigo-palette, 500);
+$accent-palette: mat.m2-define-palette(mat.$m2-pink-palette, A200, A100, A400);
 
-$typography: mat.define-typography-config();
+$typography: mat.m2-define-typography-config();
 $typography: map.set($typography, body-1, font-size, 14px);
 
-$theme: mat.define-light-theme(
+$theme: mat.m2-define-light-theme(
     (
         color: (
             primary: $primary-palette,
